Edited animation + whatWeDo hover on figure

--- a/app/index.html
+++ b/app/index.html
@@ -165,26 +165,26 @@
                     </figure>
                 </article>
             </div>
+            <footer>
+                <nav>
+                    <div class="logo"><a href="index.html">2oaks</a></div>
+                    <ul>
+                        <li><a class="menu-hover" href="index.html#contact">Contact us</a></li>
+                        <li><a class="menu-hover" href="index.html#project">Portfolio</a></li>
+                        <li><a class="menu-hover" href="index.html#about">About team</a></li>
+                    </ul>
+                    <aside>
+                        <div class="soc-links">
+                            <a href="#facebook"><i class="icon-facebook"></i></a>
+                            <a href="#instagram"><i class="icon-instagram"></i></a>
+                        </div>
+                    </aside>
+                </nav>
+                <div class="btn-up">
+                    <a href="index.html#firstScreen"><i class="icon-up-open"></i></a>
+                </div>
+            </footer>
         </section>
-        <footer id="section5" class="section fp-auto-height">
-            <nav>
-                <div class="logo"><a href="index.html">2oaks</a></div>
-                <ul>
-                    <li><a class="menu-hover" href="index.html#contact">Contact us</a></li>
-                    <li><a class="menu-hover" href="index.html#project">Portfolio</a></li>
-                    <li><a class="menu-hover" href="index.html#about">About team</a></li>
-                </ul>
-                <aside>
-                    <div class="soc-links">
-                        <a href="#facebook"><i class="icon-facebook"></i></a>
-                        <a href="#instagram"><i class="icon-instagram"></i></a>
-                    </div>
-                </aside>
-            </nav>
-            <div class="btn-up">
-                <a href="index.html#firstScreen"><i class="icon-up-open"></i></a>
-            </div>
-        </footer>
     </main>
 <script src="js/jquery.min.js"></script>
 <script type="text/javascript" src="js/scrolloverflow.min.js"></script>
