--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,12 @@
     <header >
         <nav>
             <div class="logo"><a href="index.html">2oaks</a></div>
+            <input type="checkbox" id="menu-checkbox" />
+            <label class="hamburger" for="menu-checkbox">
+                <span class="line"></span>
+                <span class="line"></span>
+                <span class="line"></span>
+            </label>
             <ul>
                 <li><a class="menu-hover" href="index.html#who-we2">Who We 2</a></li>
                 <li><a class="menu-hover" href="index.html#what">What We Do</a></li>
@@ -28,20 +34,20 @@
     </header>
     <main id="fullpage">
         <section class="firstScreen" id="section0">
-            <div class="row">
-                <blockquote>
+            <div class="row first">
+                <blockquote >
                     <p>“FACE IT, TIGER…<br>
                         YOU JUST HIT THE<br>
                         JACKPOT!”</p>
                 </blockquote>
                 <cite>M. J.</cite>
                 <div class="btn-down">
-                    <a href="index.html#what"><i class="icon-down-open"></i></a>
+                    <a href="index.html#whatWeDo"><i class="icon-down-open"></i></a>
                 </div>
             </div>
         </section>
         <section  class="whatWeDo" id="section1">
-            <div class="row">
+            <div class="row" id="whatWeDo">
                 <h2>What we do</h2>
                 <p>Only if necessary</p>
                 <div class="bg-row">
@@ -181,7 +187,7 @@
                     </aside>
                 </nav>
                 <div class="btn-up">
-                    <a href="index.html#firstScreen"><i class="icon-up-open"></i></a>
+                    <a href="index.html#section0"><i class="icon-up-open"></i></a>
                 </div>
             </footer>
         </section>
