--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
             </label>
             <ul>
                 <li><a class="menu-hover" href="index.html#who-we2">Who We 2</a></li>
-                <li><a class="menu-hover" href="index.html#what">What We Do</a></li>
+                <li><a class="menu-hover" href="index.html#whatWeDo">What We Do</a></li>
             </ul>
             <aside>
                 <div class="btn-contact"><a href="index.html#contact">Contact us</a></div>
